--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -170,7 +170,19 @@
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="{% url 'core:logout' %}">Logout</a>
+              <form
+                method="post"
+                action="{% url 'core:logout' %}"
+                class="d-inline"
+              >
+                {% csrf_token %}
+                <button
+                  type="submit"
+                  class="nav-link border-0 bg-transparent text-white"
+                >
+                  Logout
+                </button>
+              </form>
             </li>
             {% else %}
             <li class="nav-item">
@@ -209,5 +221,6 @@
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    {% block extra_js %}{% endblock %}
   </body>
 </html>
